--- a/notas_up/android/local.properties
+++ b/notas_up/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\gavalos\\AppData\\Local\\Android\\sdk
-flutter.sdk=c:\\Flutter
+sdk.dir=d:\\aplicaciones\\AndroidSDK\\
+flutter.sdk=d:\\aplicaciones\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
