--- a/notas_up/pubspec.yaml
+++ b/notas_up/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.1+1
   provider: ^4.0.3
+  flutter_spinkit: ^4.1.1+1
+  google_sign_in: ^4.1.1
   
 dev_dependencies:
   flutter_test:
@@ -44,7 +46,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
