--- a/notas_up/pubspec.yaml
+++ b/notas_up/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^4.0.3
   flutter_spinkit: ^4.1.1+1
   google_sign_in: ^4.1.1
+  flutter_twitter_login: ^1.1.0
   
 dev_dependencies:
   flutter_test:
