--- a/notas_up/pubspec.yaml
+++ b/notas_up/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   provider: ^4.0.3
   flutter_spinkit: ^4.1.1+1
   google_sign_in: ^4.1.1
-  
+  modal_progress_hud: ^0.1.3
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
