--- a/notas_up/android/local.properties
+++ b/notas_up/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\gavalos\\AppData\\Local\\Android\\sdk
 flutter.sdk=c:\\Flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=1.0.0
 flutter.versionCode=1
