--- a/notas_up/pubspec.yaml
+++ b/notas_up/pubspec.yaml
@@ -29,12 +29,17 @@ dependencies:
   flutter_spinkit: ^4.1.1+1
   google_sign_in: ^4.1.1
   modal_progress_hud: ^0.1.3
-    
+  flutter_launcher_icons: ^0.7.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "assets/icon/icon.png"
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
